<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameEditText" />


    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="@string/nameText"
        android:hint="@string/nameText" /> 

    <Button
        android:id="@+id/sayHelloButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sayHelloButton"
        android:textColor="@color/say_hello" />

</merge>