<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameText"
        android:layout_gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/computerImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/question"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/You"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageButton
            android:id="@+id/rockImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rock"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/Description"/>

        <ImageButton
            android:id="@+id/scissorsImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/scissors"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/Description"/>

        <ImageButton
            android:id="@+id/paperImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/paper"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/Description"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Result"
        android:layout_gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/resultImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/question"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Description"/>

</LinearLayout>
